--- a/WindowsFormsApp2_reporting/WindowsFormsApp2_reporting/WindowsFormsApp2_reporting.csproj
+++ b/WindowsFormsApp2_reporting/WindowsFormsApp2_reporting/WindowsFormsApp2_reporting.csproj
@@ -61,6 +61,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ADB_DA1DataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="DoanhThuTheoThang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DoanhThuTheoThang.Designer.cs">
+      <DependentUpon>DoanhThuTheoThang.cs</DependentUpon>
+    </Compile>
     <Compile Include="ThemDonHang.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +87,9 @@
     <Compile Include="XemDSHoaDon.Designer.cs">
       <DependentUpon>XemDSHoaDon.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="DoanhThuTheoThang.resx">
+      <DependentUpon>DoanhThuTheoThang.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ThemDonHang.resx">
       <DependentUpon>ThemDonHang.cs</DependentUpon>
     </EmbeddedResource>
