--- a/DATH#02/GUI_Con_Cung_App/GUI_Con_Cung_App/GUI_Con_Cung_App.csproj
+++ b/DATH#02/GUI_Con_Cung_App/GUI_Con_Cung_App/GUI_Con_Cung_App.csproj
@@ -58,11 +58,11 @@
     <Compile Include="DangNhap.Designer.cs">
       <DependentUpon>DangNhap.cs</DependentUpon>
     </Compile>
-    <Compile Include="ThanhToan.cs">
+    <Compile Include="GioHang.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ThanhToan.Designer.cs">
-      <DependentUpon>ThanhToan.cs</DependentUpon>
+    <Compile Include="GioHang.Designer.cs">
+      <DependentUpon>GioHang.cs</DependentUpon>
     </Compile>
     <Compile Include="HomePage.cs">
       <SubType>Form</SubType>
@@ -78,8 +78,8 @@
     <EmbeddedResource Include="DangNhap.resx">
       <DependentUpon>DangNhap.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ThanhToan.resx">
-      <DependentUpon>ThanhToan.cs</DependentUpon>
+    <EmbeddedResource Include="GioHang.resx">
+      <DependentUpon>GioHang.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HomePage.resx">
       <DependentUpon>HomePage.cs</DependentUpon>
